[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/UI/Enemy_HP/enemy_hpbar_prog.png" type="Texture" id=1]
[ext_resource path="res://Assets/UI/Enemy_HP/enemy_hpbar_under.png" type="Texture" id=2]
[ext_resource path="res://Assets/UI/Enemy_HP/enemy_hpbar_over2.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Enemy_HUD.gd" type="Script" id=4]
[ext_resource path="res://Assets/UI/Enemy_HP/enemy_hpbar_delay.png" type="Texture" id=5]

[node name="Enemy_HUD" type="Control"]
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnemyHpbarOver" type="Sprite" parent="."]
position = Vector2( 0, 2 )
texture = ExtResource( 3 )

[node name="e_delay" type="TextureProgress" parent="."]
margin_left = -16.0
margin_right = 22.0
margin_bottom = 3.0
value = 100.0
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="e_life" type="TextureProgress" parent="."]
margin_left = -16.0
margin_right = 22.0
margin_bottom = 3.0
texture_progress = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="timer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="delay_timer" type="Timer" parent="."]
wait_time = 0.05

[connection signal="timeout" from="delay_timer" to="." method="_on_delay_timer_timeout"]
